# geocomp-t2

./: .gitignore  CMakeLists.txt  README.md  format.sh  graficos.py  makefile  prueba.cpp  radial_cupulas_pequenas.csv  radial_grande.csv  radial_pequeno.csv  random.csv
include/convex_hull/: gift_wrapping.hpp  incremental.hpp
include/poli/: _declaraciones.hpp  _nombres.hpp  poligono.hpp  punto.hpp  vector.hpp
src/: CMakeLists.txt  poligono.cpp
src/convex_hull/: CMakeLists.txt  gift_wrapping.cpp  incremental.cpp
src/poli/: CMakeLists.txt  poligono.cpp  punto.cpp  vector.cpp
test/: CMakeLists.txt  main_test.cpp  vector_test.cpp
test/convex_hull/: CMakeLists.txt  convex_hull_test.cpp  convex_hull_test.hpp  experimentacion.cpp  gift_wrapping_test.cpp  incremental_nosort_test.cpp  incremental_test.cpp
test/poli/: CMakeLists.txt  poligono_test.cpp  punto_test.cpp  vector_test.cpp
